syntax = "proto3";

option go_package = "/files";

package files;

service Files {
 rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc GetFileById(GetFileByIdRequest) returns (GetFileByIdResponse);
   rpc GetFilesByName(GetFilesByNameRequest) returns (GetFilesByNameResponse);
   rpc GetFilesByUser(GetFilesByUserRequest) returns (GetFilesByUserRequest);
}

message File {
  string id = 1;
  bytes content = 2;
  string metadata = 3; // json
}

message UploadFileRequest {
  string user_id = 1;
  File file = 2;
}

message UploadFileResponse {
  File file = 1;
}

message GetFileByIdRequest {
  string user_id = 1;
  string id = 2;
}

message GetFileByIdResponse {
  File file = 1;
}

message GetFilesByNameRequest {
  string user_id = 1;
  string name = 2;
  uint32 limit = 3;
}

message GetFilesByNameResponse {
  repeated File files = 1;
}

message GetFilesByUserRequest {
  string user_id = 1;
  uint32 limit = 3;
}

message GetFilesByUserResponse {
  repeated File files = 1;
}